--- a/.github/workflows/rtl-conf.yml
+++ b/.github/workflows/rtl-conf.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - run: npm ci --legacy-peer-deps
     - run: npm run lint
     - run: npm run test:ci
     - run: npm run build --if-present
